--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1{
-color: cornflowerblue
+color: white
 font-family: 'Roboto', sans-serif;
 }
 
 h3{
-color: cornflowerblue
+color: white
 font-family: 'Roboto', sans-serif;
 }
