--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body{
-background-color: coral;
+background-color: CornFlowerBlue;
 }
 
 h1{
-color: white
+color: white;
 font-family: 'Roboto', sans-serif;
 }
 
 h3{
-color: white
+color: white;
 font-family: 'Roboto', sans-serif;
 }
